# CSC4005-hw

./: .gitignore
docs/: Instruction on Profiling with perf and nsys.md  startup
project1/: .gitignore  CMakeLists.txt  Project1-PartA-Results.txt  Project1-PartB-Results.txt
project1/src/: utils.cpp
project1/src/cpu/: CMakeLists.txt  mpi_PartB.cpp  mpi_PartB_pixels.cpp  openmp_PartB.cpp  openmp_simd_PartB.cpp  pthread_PartB.cpp  sequential_PartB.cpp  simd_PartB.cpp  simd_PartB_256.cpp  simd_PartB_old.cpp  simd_PartB_proto.cpp
project1/src/gpu/: CMakeLists.txt  cuda_PartA.cu  cuda_PartB.cu  openacc_PartB.cpp
project1/src/scripts/: sbatch_PartB.sh  sbatch_PartB_correctness.sh
project2/: Project2-Results-all.txt  Project2-Results-extend-2nodes.txt  Project2-Results-extend-4nodes.txt  Project2-Results.txt  debug.sh  ostp.sh  postp.sh  viewp.sh
project2/matrices/: matrix_a0.txt  matrix_a1.txt  matrix_b0.txt  matrix_b1.txt  matrix_c0.txt  matrix_c1.txt  matrix_d0.txt  matrix_d1.txt  matrix_e0.txt  matrix_e1.txt  matrix_f0.txt  matrix_f1.txt  matrix_h1.txt
project2/src/: CMakeLists.txt  compare.cpp  extend64.sh  generate_matrix.py  locality.cpp  locality_a0.cpp  locality_a1.cpp  matrix.cpp  mpi.cpp  openmp.cpp  perf.sh  sbach.sh  simd.cpp
project2/src/gpu/: CMakeLists.txt  cuda.cu
project3/: osbs.sh
project3/result/: Project3.txt  Project3_bonus.txt  perf.txt  perf_bucketsort.txt  perf_quicksort.txt
project3/src/: perf.sh  sbach.sh  sbach_bonus.sh
project3/src/bucketsort/: CMakeLists.txt  Project3.txt  mpi.cpp  mpi_alltoall.cpp  sequential.cpp
project3/src/mergesort/: CMakeLists.txt  Project3_donot_reuse_thread.txt  Project3_slow.txt  parallel.cpp
project3/src/odd-even-sort/: CMakeLists.txt  Project3.txt  mpi.cpp
project3/src/quicksort/: CMakeLists.txt  Project3.txt  mpi.cpp  parallel.cpp
project4/: CMakeLists.txt  Project4-Results.txt  sbatch.sh  test.sh
project4/result/: nn-Project4-Results.txt  simd-sequential-Project4-Results.txt  softmax-Project4-Results.txt
project4/src/: CMakeLists.txt  nn_classifier.cpp  simple_ml_ext.cpp  simple_ml_ext.hpp  simple_ml_openacc copy 2.cpp  simple_ml_openacc copy 3.cpp  simple_ml_openacc copy.cpp  simple_ml_openacc.cpp  simple_ml_openacc.hpp  softmax_classifier.cpp  softmax_classifier_openacc.cpp
